<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoPrincipal"
    android:padding="24dp"
    tools:context=".ui.authentication.RegistrarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgRegresar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="30sp"
            android:fontFamily="@font/dancing_script_bold"
            android:textColor="@color/colorTextoTitulo"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:fontFamily="@font/lato_regular"
            android:backgroundTint="@color/colorPrimario1" />

        <ImageView
            android:id="@+id/imgNombreAleatorio"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/generar_nombre"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:fontFamily="@font/lato_regular"
            android:backgroundTint="@color/colorPrimario1" />

        <EditText
            android:id="@+id/dpdFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fecha"
            android:focusable="false"
            android:clickable="true"
            android:fontFamily="@font/lato_regular"
            android:backgroundTint="@color/colorPrimario1" />

        <EditText
            android:id="@+id/edtContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contrasenia"
            android:inputType="textPassword"
            android:fontFamily="@font/lato_regular"
            android:backgroundTint="@color/colorPrimario1" />

        <EditText
            android:id="@+id/edtContraseniaR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repetir_contrasenia"
            android:inputType="textPassword"
            android:fontFamily="@font/lato_regular"
            android:backgroundTint="@color/colorPrimario1" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimario1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtIrSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_cuenta"
            android:textColor="@color/colorExtra"
            android:fontFamily="@font/dancing_script_bold"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>
