<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/barra_superior"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#29B6F6"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/toolbar_platillos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/fondo_platillos_edicion"
            android:layout_margin="15sp"
            android:padding="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="nombre del platillo"
                android:layout_marginBottom="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_imagen"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/input_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="URL de imagen"
                android:layout_marginBottom="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_descripcion"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/input_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripcion del platillo"
                android:layout_marginBottom="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_precio"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/input_precio"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Precio"
                android:layout_marginBottom="20sp"/>
            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_selector"
                android:padding="15sp"
                android:fontFamily="@font/dancingscript_bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/btn_agregar"/>



        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_lateral"
        app:headerLayout="@layout/encabezado" />


</androidx.drawerlayout.widget.DrawerLayout>