<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoPrincipal"
    tools:context=".ui.authentication.AuthenticationMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <!-- Imagen con bordes redondeados -->
        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="90dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/don_bosco"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TituloPrincipal"
            android:text="@string/menu_titulo"
            android:layout_marginBottom="8dp" />

        <!-- Subtítulo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubtituloPrincipal"
            android:text="@string/menu_subtitulo"
            android:layout_marginBottom="32dp" />

        <!-- Botón Iniciar Sesión -->
        <Button
            android:id="@+id/btnIniciar"
            style="@style/BotonEstilo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <!-- Botón Registrarse -->
        <Button
            android:id="@+id/btnRegistrar"
            style="@style/BotonEstilo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
