<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoPrincipal"
    android:padding="24dp"
    tools:context=".ui.authentication.IniciarSesionActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/txtTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:textColor="@color/colorTextoTitulo"
        android:fontFamily="@font/dancing_script_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- Campo Usuario/Correo -->
    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/login_email_hint"
        android:textColor="@color/colorTextoSecundario"
        android:textSize="20sp"
        android:fontFamily="@font/lato_regular"
        android:backgroundTint="@color/colorPrimario1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtTituloLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Campo Contraseña -->
    <EditText
        android:id="@+id/edtContrasenia"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorTextoSecundario"
        android:textSize="20sp"
        android:fontFamily="@font/lato_regular"
        android:backgroundTint="@color/colorPrimario1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- ¿Olvidó su contraseña? -->
    <TextView
        android:id="@+id/txtOlvidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_password"
        android:textColor="@color/colorPrimario2"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/edtContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Botón Entrar -->
    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:backgroundTint="@color/colorPrimario3"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/txtOlvidar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <!-- ¿No tiene cuenta? -->
    <TextView
        android:id="@+id/txtRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:textColor="@color/colorPrimario4"
        android:fontFamily="@font/dancing_script_medium"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/txtRegistrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>