<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/barra_superior"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#29B6F6"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/toolbar_editar" />

        <Button
            android:id="@+id/btn_editar_menu"
            style="@style/Widget.CafeteriaUDB.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_editar_menu"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"/>

        <Button
            android:id="@+id/btn_editar_plato"
            style="@style/Widget.CafeteriaUDB.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_editar_platillos"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"/>





    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_lateral"
        app:headerLayout="@layout/encabezado" />


</androidx.drawerlayout.widget.DrawerLayout>