<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inicio.InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/barra_superior"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#29B6F6"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/toolbar_inicio" />

        <Button
            android:id="@+id/btn_desayuno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_desayuno"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/btn_selector"
            android:backgroundTint="@null"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"
            android:fontFamily="@font/dancingscript_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_platillos_desayuno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_almuerzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_almuerzo"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/btn_selector"
            android:backgroundTint="@null"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"
            android:fontFamily="@font/dancingscript_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_platillos_almuerzo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_cena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_cena"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/btn_selector"
            android:backgroundTint="@null"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"
            android:fontFamily="@font/dancingscript_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_platillos_cena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_menu_editar"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:background="@drawable/btn_selector"
            android:backgroundTint="@null"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15sp"
            android:fontFamily="@font/dancingscript_bold"/>







    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_lateral"
        app:headerLayout="@layout/encabezado" />


</androidx.drawerlayout.widget.DrawerLayout>