<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:layout_marginVertical="5sp"
    android:background="@drawable/fondo_platillos_edicion">

    <ImageView
        android:id="@+id/imgPlatillo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="8dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text=""
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_descripcion"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_precio"
            android:textStyle="bold"/>
        <TextView android:id="@+id/txt_Precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginBottom="5sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_Eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eliminar" />
        <Button
            android:id="@+id/btn_Editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar" />
        <Button
            android:id="@+id/btn_Agregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agregar"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>